--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -145,6 +145,11 @@ jobs:
         with:
           dotnet-version: '5.0.x'
 
+      - name: ⚙️ Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+
       - name: Install dotnet-sonarscanner
         run: dotnet tool install --global dotnet-sonarscanner
       - name: Running dotnet-sonarscanner
