--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,10 +1,29 @@
-<Project>
-		
-	<PropertyGroup Condition="$(MSBuildProjectName) != 'bunit.template' AND $(MSBuildProjectName) != 'bunit'">
-		<TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
-	</PropertyGroup>
+<?xml version="1.0" encoding="utf-8"?>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-	<PropertyGroup>
+  <!--
+    Add any shared properties you want for the projects under this directory that need to be set before the auto imported Directory.Build.props
+  -->
+  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory).., Directory.Build.props))\Directory.Build.props" />
+
+  <PropertyGroup Label="Build instructions">
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <OutputType>Library</OutputType>
+    <!-- Creates a regular package and a symbols package -->
+    <IncludeSymbols>true</IncludeSymbols>
+    <!-- Creates symbol package in the new .snupkg format -->
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <!--
+      Instruct the build system to embed project source files that are not tracked by the source control
+      or imported from a source package to the generated PDB.
+    -->
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <!-- Recommended: Embed symbols containing Source Link in the main file (exe/dll) -->
+    <DebugType>embedded</DebugType>
+		<Deterministic>true</Deterministic>
+  </PropertyGroup>
+
+	<PropertyGroup Label="NuGet package information">
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<RepositoryUrl>https://github.com/egil/bunit</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
@@ -14,42 +33,12 @@
 		<Company>Egil Hansen</Company>
 		<Copyright>Egil Hansen</Copyright>
 		<Product>bUnit</Product>
-		<PublishRepositoryUrl>true</PublishRepositoryUrl>
-		<EmbedUntrackedSources>true</EmbedUntrackedSources>
-		<Deterministic>true</Deterministic>
-		<IncludeSymbols>true</IncludeSymbols>
-		<DebugType>embedded</DebugType>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>		
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)' == 'Release' AND $(MSBuildProjectName) != 'bunit.template' AND $(MSBuildProjectName) != 'bunit'">
-		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-	</PropertyGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1' AND $(MSBuildProjectName) != 'bunit.template' AND $(MSBuildProjectName) != 'bunit'">
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.1" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' AND $(MSBuildProjectName) != 'bunit.template' AND $(MSBuildProjectName) != 'bunit'">
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
+  <ItemGroup>
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 		<PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37" PrivateAssets="All" />
 	</ItemGroup>
-
-	<ImportGroup Condition="$(MSBuildProjectName) != 'bunit.template' AND $(MSBuildProjectName) != 'bunit'">
-		<Import Project="..\.build\code-analysis.props" />
-	</ImportGroup>
 
 </Project>
