--- a/src/bunit.xunit/bunit.xunit.csproj
+++ b/src/bunit.xunit/bunit.xunit.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
 		<RootNamespace>Bunit.Xunit</RootNamespace>
 		<AssemblyName>Bunit.Xunit</AssemblyName>
 	</PropertyGroup>
@@ -16,7 +16,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="SourceFileFinder" Version="1.0.1" />
-		<PackageReference Include="System.Reflection.Metadata" Version="5.0.0" />
+		<PackageReference Include="System.Reflection.Metadata" Version="$(DotNet5Version)" />
 		<PackageReference Include="xunit.assert" Version="2.4.1" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
 		<PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
