--- a/.editorconfig
+++ b/.editorconfig
@@ -476,6 +476,7 @@ dotnet_diagnostic.CA2201.severity = suggestion # CA2201: Do not raise reserved e
 # StyleCop
 # https://github.com/DotNetAnalyzers/StyleCopAnalyzers
 dotnet_diagnostic.SA1000.severity = none # BUGGY with C#9 code
+dotnet_diagnostic.SA1005.severity = none # SA1005: Single line comments should begin with single space
 dotnet_diagnostic.SA1011.severity = none # BUGGY with C#9 code
 
 dotnet_diagnostic.SA1027.severity = none # SA1027: Use Tabs Correctly
