--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,9 +67,13 @@ jobs:
           dotnet-version: '5.0.x'
 
       - name: Running unit tests
+        run: dotnet test -c Debug /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\" /p:UseSourceLink=true
+
+      - name: Running unit tests
+        if: matrix.os == 'windows-latest'
         run: |
           dotnet clean -c Debug && dotnet nuget locals all --clear
-          dotnet test -c Debug /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\" /p:UseSourceLink=true
+          dotnet test -c Debug
 
       - name: Upload coverage to Codecov
         if: matrix.os == 'ubuntu-latest'
