matrix build for netcoreapp3.1 and net5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        framework: [netcoreapp3.1, net5.0]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
@@ -69,13 +70,13 @@ jobs:
 
       - name: Running unit tests (linux, osx)
         if: matrix.os != 'windows-latest'
-        run: dotnet test -c Debug /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\" /p:UseSourceLink=true
+        run: dotnet test -c Debug --framework ${{ matrix.framework }} /p:UseSourceLink=true /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\"
 
       - name: Running unit tests (windows only)
         if: matrix.os == 'windows-latest'
         run: |
           dotnet clean -c Debug && dotnet nuget locals all --clear
-          dotnet test -c Debug
+          dotnet test -c Debug --framework ${{ matrix.framework }}
 
       - name: Upload coverage to Codecov
         if: matrix.os == 'ubuntu-latest'
