Tweaks to WaitFor logic to work around race conditions between renderer and wait for checker being run (#328)
* Tweaks to WaitFor logic to work around race conditions between renderer and wait for checker being run

* Does Wait() affect syn context?

* CLean up

* added logging

* Added logging to renderer

* More log messages

* code cleanup in template

* Exclude problematic test from netcoreapp3_1

* Move InvokeAsync methods to be extensions on IRenderedFragmentBase

* Added ncrunch config

* Updated test action to run on all OSs

* Attempt to make build work on Windows

* Test specific run for windows

* Fix os filters

* turn off fail-fast

* matrix build for netcoreapp3.1 and net5

* Replaced GetAwaiter().GetResult() with Wait()

* Revert "Replaced GetAwaiter().GetResult() with Wait()"

This reverts commit d9730374e032f3265a8c0184fb97cd7bd186dc3c.

* Added logging to track threads being used

* Additional logging

* Added additional complete check before subscribing to renders from component

* Delete bunit.v3.ncrunchsolution

* Fixed namespace for BunitJSInteropSetupExtensions

* Skipping test that is dependent on timing/CPU performance.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,12 @@ jobs:
 
   dotnet-test:
     if: github.event_name != 'schedule'
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        framework: [netcoreapp3.1, net5.0]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -63,12 +68,18 @@ jobs:
         with:
           dotnet-version: '5.0.x'
 
-      - name: Running unit tests
+      - name: Running unit tests (linux, osx)
+        if: matrix.os != 'windows-latest'
+        run: dotnet test -c Debug --framework ${{ matrix.framework }} /p:UseSourceLink=true /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\"
+
+      - name: Running unit tests (windows only)
+        if: matrix.os == 'windows-latest'
         run: |
-          dotnet build -c Debug /nowarn:CS1591  /p:UseSourceLink=true
-          dotnet test -c Debug --no-build /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\" /p:UseSourceLink=true
+          dotnet clean -c Debug && dotnet nuget locals all --clear
+          dotnet test -c Debug --framework ${{ matrix.framework }}
 
       - name: Upload coverage to Codecov
+        if: matrix.os == 'ubuntu-latest'
         uses: codecov/codecov-action@v1
 
   verify-template:
