--- a/.editorconfig
+++ b/.editorconfig
@@ -563,4 +563,5 @@ dotnet_diagnostic.SA1649.severity = none # SA1649: File name should match first 
 # https://rules.sonarsource.com/csharp
 dotnet_diagnostic.S125.severity = none # S125: Sections of code should not be commented out
 dotnet_diagnostic.S3459.severity = none # S3459: Unassigned members should be removed
+dotnet_diagnostic.S3871.severity = none # S3871: Exception types should be "public"
 dotnet_diagnostic.S1186.severity = none # S1186: Methods should not be empty
