--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -16,6 +16,8 @@
 		<PackageReference Include="AngleSharp" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Css" Version="0.14.2" />
 		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
+		<PackageReference Include="AutoFixture" Version="4.15.0" />
+		<PackageReference Include="AutoFixture.Xunit2" Version="4.15.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
 		<PackageReference Include="Moq" Version="4.16.0" />
 		<PackageReference Include="Shouldly" Version="4.0.3" />
