Added setup suggestions to JSRuntimeUnhandledInvocationException message

--- a/tests/bunit.web.tests/bunit.web.tests.csproj
+++ b/tests/bunit.web.tests/bunit.web.tests.csproj
@@ -13,4 +13,8 @@
 		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="JSInterop\NewFolder\" />
+	</ItemGroup>
+
 </Project>
