--- a/tests/bunit.web.tests/bunit.web.tests.csproj
+++ b/tests/bunit.web.tests/bunit.web.tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
@@ -9,12 +9,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\bunit.core\bunit.core.csproj" />
 		<ProjectReference Include="..\..\src\bunit.web\bunit.web.csproj" />
-		<ProjectReference Include="..\..\src\bunit.xunit\bunit.xunit.csproj" />
 		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="JSInterop\NewFolder\" />
 	</ItemGroup>
 
 </Project>
