--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,7 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
+
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.x'
@@ -74,9 +75,7 @@ jobs:
 
       - name: Running unit tests (windows only)
         if: matrix.os == 'windows-latest'
-        run: |
-          dotnet clean -c Debug && dotnet nuget locals all --clear
-          dotnet test -c Debug --framework ${{ matrix.framework }}
+        run: dotnet test -c Debug --framework ${{ matrix.framework }}
 
       - name: Upload coverage to Codecov
         if: matrix.os == 'ubuntu-latest'
