Changed build to not push a new release to nuget when push to master

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -244,7 +244,7 @@ jobs:
           dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true
 
       - name: Creating library package for release
-        if: github.ref == 'refs/heads/main' || github.event_name == 'release'
+        if: github.event_name == 'release'
         run: |
           dotnet pack -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true /p:PublicRelease=true
           dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true /p:PublicRelease=true
