--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -13,16 +13,13 @@
   </PropertyGroup>
 
 	<ItemGroup Condition="$(MSBuildProjectName) != 'bunit.testassets'">
-		<PackageReference Include="AngleSharp" Version="0.14.0" />
-		<PackageReference Include="AngleSharp.Css" Version="0.14.2" />
-		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
 		<PackageReference Include="AutoFixture" Version="4.15.0" />
 		<PackageReference Include="AutoFixture.Xunit2" Version="4.15.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+		<PackageReference Include="GitHubActionsTestLogger" Version="1.2.0" />
 		<PackageReference Include="Moq" Version="4.16.1" />
 		<PackageReference Include="Shouldly" Version="4.0.3" />
 		<PackageReference Include="xunit" Version="2.4.1" />
-		<PackageReference Include="AutoFixture.Xunit2" Version="4.15.0" />
 		<PackageReference Include="Xunit.Combinatorial" Version="1.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" PrivateAssets="All" />
 		<PackageReference Include="coverlet.msbuild" Version="3.0.3" PrivateAssets="All" />
