--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,10 +82,13 @@ jobs:
           echo "RELEASE_COMMIT_HASH=$(git rev-parse stable)" >> $GITHUB_ENV
 
       - name: 🛠️ Building library in release mode
-        run: dotnet pack src/ -c release -p:ContinuousIntegrationBuild=true
+        run: |
+          dotnet pack -c Release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
+          dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
+          dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
         
       - name: 🛠️ Upload library to NuGet.org repository
-        run: echo "TODO"      
+        run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols true
 
       - name: ⏩ Push stable branch
         run: git push origin stable
