--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'docs/**'  
+      
   pull_request:
     types:
       - opened
