--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,57 +1,76 @@
-# name: "Build and Deploy Docs"
+name: "docs-deploy"
 
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths-ignore:
-#       - '!docs/**'
-#       - '!.github/**'
+on:
+  push:
+    branches:
+      - stable
+    paths-ignore:
+      - '!docs/**'
 
-# jobs:
-#   build:
-#     runs-on: windows-latest
-#     env:
-#       VERSION: ''
-#     steps:
-#       - uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+  workflow_dispatch:    
 
-#       - uses: dotnet/nbgv@master
-#         with:
-#           setAllVars: true
+jobs:
+  deploy:
+    name: 📃 Deploy new version bunit.dev
+    runs-on: windows-latest
+    steps:
+    
+      - name: 🛒 Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-#       - name: Setting VERSION env
-#         run: echo "VERSION=$NBGV_NuGetPackageVersion" >> $GITHUB_ENV
+      - name: ⚙️ Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v3
+        with:
+          gpg-private-key: ${{ secrets.BUNIT_BOT_GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.BUNIT_BOT_GPG_KEY_PASSPHRASE }}
+      
+      - name: ⚙️ Setup CI GIT
+        run: |
+          git config user.name "${{ steps.import_gpg.outputs.name }}"
+          git config user.email ${{ steps.import_gpg.outputs.email }}
+          git config --global user.signingkey ${{ steps.import_gpg.outputs.keyid }}
+          git config --global commit.gpgsign true   
 
-#       - name: Update tokens in project files
-#         uses: cschleiden/replace-tokens@v1
-#         with:
-#           files: '["docs/site/*.md", "docs/**/*.md", "docs/**/*.tmpl.partial", "*.csproj", "**/*.csproj"]'
+      - name: ⚙️ Setup GIT versioning
+        uses: dotnet/nbgv@v0.4.0
+        with:
+          setAllVars: true   
+          
+      - name: 🛠️ Update tokens in project files
+        uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["docs/site/*.md", "docs/**/*.md", "docs/**/*.tmpl.partial", "*.csproj", "**/*.csproj"]'
+          
+      - name: ⚙️ Setup dotnet 5.0.x
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.x'
 
-#       - uses: actions/setup-dotnet@v1
-#         with:
-#           dotnet-version: '3.1.x'
-#       - uses: actions/setup-dotnet@v1
-#         with:
-#           dotnet-version: '5.0.x'
+      - name: 🛠️ Building bUnit
+        run: dotnet build /p:PublicRelease=true
 
-#       - name: Building library
-#         run: dotnet build /p:PublicRelease=true
+      - name: 🛠️ Verfiy docs samples
+        run: dotnet test docs/samples/samples.sln
 
-#       - name: Verfiy docs samples
-#         run: dotnet test docs/samples/samples.sln
-
-#       - name: Building docs
-#         run: |
-#           dotnet build docs/site/
-#           dotnet build docs/site/
-#       - name: Deploy to GitHub Pages
-#         if: success()
-#         uses: crazy-max/ghaction-github-pages@v2
-#         with:
-#           target_branch: gh-pages
-#           build_dir: docs/site/_site
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🛠️ Building docs
+        run: |
+          dotnet build docs/site/
+          dotnet build docs/site/
+          
+      - name: 🛠️ Deploy to GitHub Pages
+        if: success()
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          build_dir: docs/site/_site
+          fqdn: bunit.dev
+          repo: https://github.com/bUnit-dev/bUnit-dev.github.io
+          target_branch: main
+          keep_history: false
+          jekyll: false
+          committer: "bUnit bot <bot@bunit.dev>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_PAT: ${{ secret.BUNIT_BOT_TOKEN }}
